[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mediatools"
version = "0.1.0"
description = "Reusable media processing utilities — probe, clip, extract audio"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Xolvco", email = "bruce@xolv.co" }]
requires-python = ">=3.11"
dependencies = [
    "videoedit @ git+https://github.com/xolvco/videoedit.git@main",
]  # ffprobe/ffmpeg expected on PATH

[project.optional-dependencies]
download = ["yt-dlp>=2024.1.1"]
dev = ["pytest", "pytest-cov", "ruff"]
all = ["yt-dlp>=2024.1.1"]

[project.scripts]
mediatools = "mediatools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mediatools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
